src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  *:focus-visible {
    @apply rounded-full outline outline-2 outline-offset-4 outline-secondary-800;
  }
}

@layer components {
  .container-lg {
    @apply mx-auto max-w-screen-lg px-4 py-6 sm:px-6 sm:py-8 md:px-8 md:py-10;
  }
  .container-md {
    @apply mx-auto max-w-screen-md px-4 py-6 sm:px-6 sm:py-8 md:px-8 md:py-10;
  }
  .container-sm {
    @apply mx-auto max-w-screen-sm px-4 py-6 sm:px-6 sm:py-8 md:px-8 md:py-10;
  }

  .gold-gradient {
    @apply bg-gradient-to-br from-primary-300 from-10% via-primary-100 via-40% to-primary-300 to-90%;
  }
}

@layer utilities {
  .text-gold {
    @apply gold-gradient bg-clip-text text-transparent;
    /* prevents strange lines on Safari (https://stackoverflow.com/questions/73143985/strange-lines-when-using-background-clip-text-on-safari) */
    clip-path: inset(1px);
  }
}

.grecaptcha-badge {
  visibility: hidden;
}

